<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.enib.lesbg.tradsign.ParamMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/GameModeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/GifButG"
            android:layout_gravity="right">

            <RadioButton
                android:id="@+id/GifButG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gifMode"
                android:onClick="onAnimButtonClicked" />

            <RadioButton
                android:id="@+id/AnimButG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animate2DMode"
                android:onClick="onAnimButtonClicked"/>

        </RadioGroup>

        <TextView
            android:id="@+id/QuestionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="25sp"/>

        <com.enib.lesbg.tradsign.AnimatedCharacter
            android:id="@+id/AnimatedCharacterG"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="invisible"/>

        <VideoView
            android:id="@+id/GifVideoViewG"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:layout_weight="3"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/AnswerText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:lines="1"
            android:hint="@string/gameEditTextHint"
            android:layout_weight="9" />


        <Button
            android:id="@+id/validate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/validate"
            android:onClick="onValidateButtonCLicked"
            android:layout_weight="9"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>